--- a/angular-form/src/app/template-driven-form/template-driven-form.component.html
+++ b/angular-form/src/app/template-driven-form/template-driven-form.component.html
@@ -2,32 +2,32 @@
     <form #contactForm="ngForm" (submit)="saveData(contactForm)">
         <p>
             <label>First name : </label>
-            <input type="text" name="first_name" id="first_name" ngModel>
+            <input type="text" name="first_name" id="first_name" [(ngModel)]="contactFormData.firstName">
         </p>
         <p>
             <label>Last name : </label>
-            <input type="text" name="last_name" id="last_name" ngModel>
+            <input type="text" name="last_name" id="last_name" [(ngModel)]="contactFormData.lastName">
         </p>
         <p>
             <label>Mobile number : </label>
-            <input type="text" name="mobile_number" id="mobile_number" ngModel>
+            <input type="text" name="mobile_number" id="mobile_number" [(ngModel)]="contactFormData.mobileNumber">
         </p>
         <p>
             <label>Email : </label>
-            <input type="text" name="email" id="email" ngModel>
+            <input type="text" name="email" id="email" [(ngModel)]="contactFormData.email">
         </p>
         <p>
             <label>Gender : </label>
-            <input type="radio" name="gender" id="gender" value="Male" ngModel>Male
-            <input type="radio" name="gender" id="gender" value="Female" ngModel>Female
+            <input type="radio" name="gender" id="gender" value="Male" [(ngModel)]="contactFormData.gender">Male
+            <input type="radio" name="gender" id="gender" value="Female" [(ngModel)]="contactFormData.gender">Female
         </p>
         <p>
             <label>Married status : </label>
-            <input type="checkbox" name="married_status" id="married_status" ngModel>
+            <input type="checkbox" name="married_status" id="married_status" [(ngModel)]="contactFormData.marriedStatus">
         </p>
         <p>
             <label>Country : </label>
-            <select name="country" id="country" ngModel>
+            <select name="country" id="country" [(ngModel)]="contactFormData.country">
                 <option value="">Select</option>
                 <option [ngValue]="item.id" *ngFor="let item of countryData"> {{item.name}} </option>
             </select>
@@ -35,15 +35,15 @@
         <div ngModelGroup="address">
             <p>
                 <label>City name : </label>
-                <input type="text" name="city_name" id="city_name" ngModel>
+                <input type="text" name="city_name" id="city_name" [(ngModel)]="contactFormData.address.cityName">
             </p>
             <p>
                 <label>State name : </label>
-                <input type="text" name="state_name" id="state_name" ngModel>
+                <input type="text" name="state_name" id="state_name" [(ngModel)]="contactFormData.address.stateName">
             </p>
             <p>
                 <label>Pincode : </label>
-                <input type="text" name="pin_code" id="pin_code" ngModel>
+                <input type="text" name="pin_code" id="pin_code" [(ngModel)]="contactFormData.address.pinCode">
             </p>
         </div>
         <p>
